@@ -107,6 +107,8 @@ sub writeScript # (file)
 	print $file "# Server description: $desc\n";
 	print $file "# Generated by ANSTE\n\n";
 
+    $self->_addTemporaryNameServer($file);
+
 	my @packages = @{$self->{host}->packages()->list()};
     if (@packages) {
         $self->_writePreInstall($file);
@@ -115,6 +117,17 @@ sub writeScript # (file)
     }
 	$self->_writeNetworkConfig($file);
 	$self->_writeHostsConfig($file);
+}
+
+sub _addTemporaryNameServer # (file)
+{
+    my ($self, $file) = @_;
+
+    my $system = $self->{system};
+    my $nameserver = '8.8.8.8'; # FIXME: unhardcode this
+    print $file "# Add temporary nameServer\n";
+    my $command = "echo 'nameserver $nameserver' > /etc/resolv.conf\n";
+    print $file "$command\n\n";
 }
 
 sub _writePreInstall # (file)
